# semantic-clinical-matching

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: config.py  main.py  models.py  pipeline.py
app/ingestion/: resume_loader.py
app/reranker/: llm_reranker.py  prompts.py
app/retriever/: faiss_retriever.py
scripts/: build_demo_uk_dataset.py  prepare_data.py  start_server.sh
static/: app.js  index.html  style.css
tests/: conftest.py  test_api.py  test_pipeline.py  test_reranker.py  test_retriever.py
